# fedpilot-data-distribution

./: LICENSE  pyproject.toml
src/datasets/: dataset_loader.py  load_and_prepare_data_base_on_type.py
src/datasets/image/: data_driven_clustering.py  datasets_generator.py  get_dataloader.py  label_distribution.py  load_and_prepare_data.py  partition_data.py
src/datasets/text/bbc/: data_spliting.py  preprocess.py
src/datasets/text/shakespeare/: preprocess_shakespeare.py  shakespear_factory.py
src/datasets/text/yahoo/: yahoo_factory.py
