[project]
name = "Fedpilot Data Distribution"
version = "0.0.1"
authors = [
  { name="FedPilot Team", email="team.fp@outlook.com"},
  { name="Mohammad Mojtaba Roshani", email="mohammadmojtabaroshani@outlook.com"},
  { name="Amirreza Rezvani", email="rezvaniamir99@gmail.com"}
]
description = "FedPilot data distribution is a pip package for IID and Non-IID distributions in federated and distributed learning environments!"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/fedpilot/fedpilot-data-distribution"
Issues = "https://github.com/fedpilot/fedpilot-data-distribution/issues"
